hw5/redmine_deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine
spec:
  selector:
    matchLabels:
      app: redmine
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: redmine
    spec:
      containers:
      - image: redmine:4.1.1
        name: redmine
        ports:
        - containerPort: 3000
