hw5/redmine_service.yml
apiVersion: v1
kind: Service
metadata:
    name: redmine
spec:
    selector:
        app: redmine
    ports:
        - protocol: TCP
          port: 3000
          targetPort: 3000
