hw5/redmine_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: remine-ingress
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
        - http:
              paths:
                  - path: /remine
                    pathType: Prefix
                    backend:
                        service:
                            name: redmine
                            port:
                                number: 80
